# qmemory-bench

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  _e2e_deepseek_test.py  _inspect_locomo.py  build_exe.py  eval_comprehensive.py  eval_locomo.py  eval_real_locomo.py  pyproject.toml  qmemory-bench.spec
.github/: copilot-instructions.md
.github/instructions/: datasets-and-scoring.instructions.md  pipeline-integrity.instructions.md  ui-and-reporting.instructions.md
data/: conflict-resolution_quick.json  implicit-memory_quick.json  implicit_memory.json  locomo_quick.json  locomo_standard.json  longmemeval-s_quick.json  longmemeval-s_quick_v1.json  longmemeval-s_standard.json  multimodal_quick.json  multimodal_standard.json  preference-drift_quick.json  preference_drift.json  profile-accuracy_quick.json  qmemory-chinese_quick.json  qmemory-chinese_standard.json  stress-latency_quick.json  stress-scale_quick.json
docs/: benchmark-report-v0.1.0.md  v0.2.0-iteration-plan.md
docs/data/: v0.1.0_release_full.json
scripts/: eval_48_49.py  gen_standard_datasets.py
src/qmemory_bench/: __init__.py  __main__.py  cli.py  dataset.py  judge.py  noise_test.py  providers.py  public_datasets.py  runner.py
src/qmemory_bench/ui/: app.py  i18n.py
src/qmemory_bench/ui/assets/: .gitkeep
tests/: test_bench.py  test_noise.py
